src/test/deca/context/invalid/invalid_complet/cast1.deca
// Description:
//    Programme de test de cast.

class A {}

class C {}


{
	A a = new A();
	C c = new C();
	c = (C)(a);
}